--- a/visiteur_pro_app/composer.json
+++ b/visiteur_pro_app/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "*",
+        "laravel-lang/lang": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
